// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flexLinePack renders 0 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: 0;
  -ms-flex-line-pack: 0;
  flex-line-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 0;
  -ms-flex-line-pack: 0;
  flex-line-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 0;
  -ms-flex-line-pack: 0;
  flex-line-pack: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 0;
  -ms-flex-line-pack: 0;
  flex-line-pack: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders function 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: hasnot;
  -ms-flex-line-pack: hasnot;
  flex-line-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: has;
  -ms-flex-line-pack: has;
  flex-line-pack: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: hasnot;
  -ms-flex-line-pack: hasnot;
  flex-line-pack: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: has;
  -ms-flex-line-pack: has;
  flex-line-pack: has;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: invalid.path.1;
  -ms-flex-line-pack: invalid.path.1;
  flex-line-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: invalid.path.1;
  -ms-flex-line-pack: invalid.path.1;
  flex-line-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: invalid.path.1;
  -ms-flex-line-pack: invalid.path.1;
  flex-line-pack: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: invalid.path.1;
  -ms-flex-line-pack: invalid.path.1;
  flex-line-pack: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders negative number 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: -54881;
  -ms-flex-line-pack: -54881;
  flex-line-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: -54881;
  -ms-flex-line-pack: -54881;
  flex-line-pack: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: -42365;
  -ms-flex-line-pack: -42365;
  flex-line-pack: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: -42365;
  -ms-flex-line-pack: -42365;
  flex-line-pack: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: July;
    -ms-flex-line-pack: July;
    flex-line-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: September;
    -ms-flex-line-pack: September;
    flex-line-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: July;
    -ms-flex-line-pack: July;
    flex-line-pack: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: September;
    -ms-flex-line-pack: September;
    flex-line-pack: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: May;
    -ms-flex-line-pack: May;
    flex-line-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: June;
    -ms-flex-line-pack: June;
    flex-line-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: April;
    -ms-flex-line-pack: April;
    flex-line-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: May;
    -ms-flex-line-pack: May;
    flex-line-pack: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: June;
    -ms-flex-line-pack: June;
    flex-line-pack: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-flex-line-pack: April;
    -ms-flex-line-pack: April;
    flex-line-pack: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-flex-line-pack: July;
    -ms-flex-line-pack: July;
    flex-line-pack: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-line-pack: September;
    -ms-flex-line-pack: September;
    flex-line-pack: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-flex-line-pack: July;
    -ms-flex-line-pack: July;
    flex-line-pack: July;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media January {
  .c0 {
    -webkit-flex-line-pack: September;
    -ms-flex-line-pack: September;
    flex-line-pack: September;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: November;
    -ms-flex-line-pack: November;
    flex-line-pack: November;
  }
}

@media June {
  .c0 {
    -webkit-flex-line-pack: August;
    -ms-flex-line-pack: August;
    flex-line-pack: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-line-pack: January;
    -ms-flex-line-pack: January;
    flex-line-pack: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: December;
    -ms-flex-line-pack: December;
    flex-line-pack: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-line-pack: April;
    -ms-flex-line-pack: April;
    flex-line-pack: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: May;
    -ms-flex-line-pack: May;
    flex-line-pack: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-line-pack: June;
    -ms-flex-line-pack: June;
    flex-line-pack: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-flex-line-pack: January;
    -ms-flex-line-pack: January;
    flex-line-pack: January;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: December;
    -ms-flex-line-pack: December;
    flex-line-pack: December;
  }
}

@media January {
  .c0 {
    -webkit-flex-line-pack: April;
    -ms-flex-line-pack: April;
    flex-line-pack: April;
  }
}

@media April {
  .c0 {
    -webkit-flex-line-pack: May;
    -ms-flex-line-pack: May;
    flex-line-pack: May;
  }
}

@media June {
  .c0 {
    -webkit-flex-line-pack: June;
    -ms-flex-line-pack: June;
    flex-line-pack: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: 54881;
  -ms-flex-line-pack: 54881;
  flex-line-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 54881;
  -ms-flex-line-pack: 54881;
  flex-line-pack: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 42365;
  -ms-flex-line-pack: 42365;
  flex-line-pack: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: 42365;
  -ms-flex-line-pack: 42365;
  flex-line-pack: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders string 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: July;
  -ms-flex-line-pack: July;
  flex-line-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: July;
  -ms-flex-line-pack: July;
  flex-line-pack: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: June;
  -ms-flex-line-pack: June;
  flex-line-pack: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: June;
  -ms-flex-line-pack: June;
  flex-line-pack: June;
}

<div
    className="c0"
  />,
]
`;

exports[`flexLinePack renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-flex-line-pack: DarkSlateBlue;
  -ms-flex-line-pack: DarkSlateBlue;
  flex-line-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: DarkSlateBlue;
  -ms-flex-line-pack: DarkSlateBlue;
  flex-line-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: DarkSlateBlue;
  -ms-flex-line-pack: DarkSlateBlue;
  flex-line-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-flex-line-pack: DarkSlateBlue;
  -ms-flex-line-pack: DarkSlateBlue;
  flex-line-pack: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
